Fixed off-center text on the home page.

--- a/css/home.css
+++ b/css/home.css
@@ -117,7 +117,8 @@ nav a:visited
 {
 	display: inline-block;
 
-	margin-left: 15%;
+	margin-left: 10%;
+	margin-right:10%;
 	margin-top: 25%;
 	color: white;
 	font-size: 42px;
